site-assets/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    margin: 0 auto;
    padding: 20px;
    font-family: arial, sans-serif;
}

.margin-top {
    margin-top: 20px;
}

.max-width {
    max-width: 700px;
    margin: auto;
}

p {
    font-size: 1rem;
    color: black;
}

h1 {
    font-size: 2rem;
    color: black;
}
h2 {
    font-size: 1.5rem;
    color: black;
}
h3 {
    font-size: 1.25rem;
    color: black;
}
h4 {
    font-size: 1rem;
    color: black;
}
h5 {
    font-size: 0.875rem;
    color: black;
}

.profile-pic {
    width: 100px;
    height: 100px;
    border-radius: 50%;
}

a {
    color: black;
    text-decoration: underline;
}

.newsletter-signup {
    background-color: white;
    padding: 20px;
    border-radius: 10px;
    border: 1px solid #adacac;
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 20px;
    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s ease;
    max-width: 500px;
}

.newsletter-signup h3 {
    font-size: 1.25rem;
    color: black;
    margin-bottom: 10px;
}

.newsletter-signup p {
    font-size: 1rem;
    color: black;
    margin-bottom: 10px;
}

.newsletter-signup form {
    display: flex;
    flex-direction: column;
}

.newsletter-signup form label {
    font-size: 1rem;
    color: black;
    font-weight: bold;
}

.newsletter-signup form input {
    padding: 10px;
    border-radius: 5px;
    border: 1px solid #b1b0b0;
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 1rem;
}

.newsletter-signup form button {
    padding: 10px;
    border-radius: 999px;
    border: none;
    background-color: #4500a0;
    color: white;
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 1rem;
    cursor: pointer;
    width: 100px;
    transition: background-color 0.3s ease;
}

.newsletter-signup form button:hover {
    background-color: #400070;
}

.social-links {
    display: flex;
    gap: 10px;
}

